refactor: simplify user service http structure
