# user/internal/adapters/http/errors.go
@@ -1,19 +1,0 @@
-package http
-
-import (
-	"encoding/json"
-	"net/http"
-)
-
-type ErrorResponse struct {
-	Message string `json:"message"`
-}
-
-func writeError(w http.ResponseWriter, status int, message string) {
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(status)
-
-	_ = json.NewEncoder(w).Encode(ErrorResponse{
-		Message: message,
-	})
-}
